# python_microservices

./: .gitignore  README.md  docker-compose.yml  run-local-dev.sh
api-gateway/: Dockerfile  pyproject.toml
api-gateway/src/api_gateway/: __init__.py
api-gateway/src/api_gateway/app/: auth.py  main.py  ws_manager.py
api-gateway/src/api_gateway/app/middleware/: metrics_middleware.py
k8s/minikube/: api-gateway-deployment.yaml  posts-deployment.yaml  users-deployment.yaml
posts/: pyproject.toml
posts/src/posts/: __init__.py
posts/src/posts/app/: main.py  repository.py
shared/: pyproject.toml
shared/src/: __init__.py
shared/src/shared/database/: __init__.py  mongo.py  postgres.py
shared/src/shared/messagebus/: __init__.py  bus.py  decorators.py  event_bus.py
shared/src/shared/rpc/: __init__.py  rpc_bus.py
shared/src/shared/utils/: __init__.py  json_tools.py
users/: Dockerfile  pyproject.toml
users/src/users/app/: main.py  repository.py
