[project]
name = "posts"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "motor",
    "aio-pika",
    "tenacity",
    "pydantic",
]

[project.optional-dependencies]
dev = ["watchfiles"]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]